tests/sksl/errors/InterfaceBlockStorageModifiers.sksl
uniform foo { out int x; };
